create manual annotation component

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schema Annotations</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link href="css/pure-release-1.0.1/pure-min.css" rel="stylesheet" type="text/css">
-    <link href="css/pure-release-1.0.1/grids-responsive-min.css"
+    <link href="css/pure/pure-min.css" rel="stylesheet" type="text/css">
+    <link href="css/pure/grids-responsive-min.css"
           rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <!-- app container -->
